hphp/test/slow/parser/hh-reserved-name-callable-1.php.expectf
Fatal error: syntax error, unexpected T_CALLABLE in %s on line 3
